tests/solidity-semantic-tests/out/errors/require_error_multiple_arguments/C.clear.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_multiple_arguments.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
